--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.35.0"
+    "@babel/core": "^7.15.8",
+    "babel-loader": "^8.1.0",
+    "msw": "^0.35.0",
+    "path": "^0.12.7",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.9.1"
   }
 }
